Bump Spring Boot 4